--- a/src/style.css
+++ b/src/style.css
@@ -6,7 +6,7 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: white;
+  background-color: rgb(201, 198, 198);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -74,6 +74,7 @@ button:focus-visible {
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+  background-color: white;
 }
 
 @media (prefers-color-scheme: light) {
