--- a/src/style.css
+++ b/src/style.css
@@ -74,7 +74,7 @@ button:focus-visible {
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
-  background-color: white;
+  /* background-color: white; */
 }
 
 @media (prefers-color-scheme: light) {
